# RShell

./: .gitignore  CMakeLists.txt
common/: rs_cmd.c  rs_cmd.h  rs_msg.c  rs_msg.h
server/includes/: rs_internal.h  rs_io.h  rs_list.h  rs_net.h  rs_shell.h  rs_sys.h  rs_thread.h
server/sources/: rs_list.c  rs_shell.c
server/sources/unix/: rs_net.c  rs_sys.c  rs_thread.c
test/: main.c
